scraper for github: extract user and repositories information

--- a/scraping-projects/begineer-scraping/github/scraper.ipynb
+++ b/scraping-projects/begineer-scraping/github/scraper.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 133,
    "metadata": {},
@@ -8,9 +15,6 @@
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.common.keys import Keys\n",
-    "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
