update scraper: extract hurricane information

--- a/scraping-projects/begineer-scraping/accuweather/scraper.ipynb
+++ b/scraping-projects/begineer-scraping/accuweather/scraper.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +70,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info_hurr = []\n",
+    "def extract_hurr_info(driver):\n",
+    "    see_more = driver.find_element(By.XPATH, '/html/body/div/div[7]/div[1]/div[1]/div[2]/div/a').get_attribute('href')\n",
+    "    driver_temp = open_web_page(see_more)\n",
+    "    driver_temp.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/div[2]/div[4]').click()\n",
+    "    \n",
+    "    rows = driver_temp.find_elements(By.XPATH, '/html/body/div/div[7]/div[1]/div[1]/div[2]/div[3]/a')\n",
+    "\n",
+    "    for row in rows:\n",
+    "        name = row.find_element(By.XPATH,'div[1]/div[2]').text\n",
+    "        type = row.find_element(By.XPATH,'div[2]/div[1]').text\n",
+    "        date = row.find_element(By.XPATH,'div[2]/div[2]').text\n",
+    "        ocean = row.find_element(By.XPATH,'div[2]/div[3]').text\n",
+    "        info_hurr.append([name, type,date,ocean])\n",
+    "    driver_temp.quit()\n",
+    "    driver.quit()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -78,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -156,67 +180,67 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Chihuahua</td>\n",
-       "      <td>30°</td>\n",
+       "      <td>31°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Ciudad de México</td>\n",
-       "      <td>22°</td>\n",
+       "      <td>23°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Ciudad Nezahualcóyotl</td>\n",
-       "      <td>22°</td>\n",
+       "      <td>24°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Ciudad Victoria</td>\n",
-       "      <td>30°</td>\n",
+       "      <td>31°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Ecatepec de Morelos</td>\n",
-       "      <td>22°</td>\n",
+       "      <td>23°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Guadalajara</td>\n",
-       "      <td>26°</td>\n",
+       "      <td>27°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Gustavo A. Madero</td>\n",
-       "      <td>22°</td>\n",
+       "      <td>23°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Heroica Puebla de Zaragoza</td>\n",
-       "      <td>21°</td>\n",
+       "      <td>24°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Iztapalapa</td>\n",
-       "      <td>21°</td>\n",
+       "      <td>24°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Juárez</td>\n",
-       "      <td>29°</td>\n",
+       "      <td>32°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>León</td>\n",
-       "      <td>25°</td>\n",
+       "      <td>27°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>León de los Aldama</td>\n",
-       "      <td>25°</td>\n",
+       "      <td>27°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Mexicali</td>\n",
-       "      <td>36°</td>\n",
+       "      <td>32°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -226,22 +250,22 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>Nezahualcóyotl</td>\n",
-       "      <td>22°</td>\n",
+       "      <td>24°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>Puebla</td>\n",
-       "      <td>21°</td>\n",
+       "      <td>24°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>Tijuana</td>\n",
-       "      <td>21°</td>\n",
+       "      <td>19°</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>Zapopan</td>\n",
-       "      <td>26°</td>\n",
+       "      <td>28°</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -251,27 +275,27 @@
        "                          city temperature\n",
        "0               Aguascalientes         26°\n",
        "1                     Campeche         26°\n",
-       "2                    Chihuahua         30°\n",
-       "3             Ciudad de México         22°\n",
-       "4        Ciudad Nezahualcóyotl         22°\n",
-       "5              Ciudad Victoria         30°\n",
-       "6          Ecatepec de Morelos         22°\n",
-       "7                  Guadalajara         26°\n",
-       "8            Gustavo A. Madero         22°\n",
-       "9   Heroica Puebla de Zaragoza         21°\n",
-       "10                  Iztapalapa         21°\n",
-       "11                      Juárez         29°\n",
-       "12                        León         25°\n",
-       "13          León de los Aldama         25°\n",
-       "14                    Mexicali         36°\n",
+       "2                    Chihuahua         31°\n",
+       "3             Ciudad de México         23°\n",
+       "4        Ciudad Nezahualcóyotl         24°\n",
+       "5              Ciudad Victoria         31°\n",
+       "6          Ecatepec de Morelos         23°\n",
+       "7                  Guadalajara         27°\n",
+       "8            Gustavo A. Madero         23°\n",
+       "9   Heroica Puebla de Zaragoza         24°\n",
+       "10                  Iztapalapa         24°\n",
+       "11                      Juárez         32°\n",
+       "12                        León         27°\n",
+       "13          León de los Aldama         27°\n",
+       "14                    Mexicali         32°\n",
        "15                   Monterrey         31°\n",
-       "16              Nezahualcóyotl         22°\n",
-       "17                      Puebla         21°\n",
-       "18                     Tijuana         21°\n",
-       "19                     Zapopan         26°"
+       "16              Nezahualcóyotl         24°\n",
+       "17                      Puebla         24°\n",
+       "18                     Tijuana         19°\n",
+       "19                     Zapopan         28°"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,18 +307,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver2 = open_web_page(more_info_url)"
+    "driver_2 = open_web_page(hurricanes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extract_hurr_info(driver_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_hurr= pd.DataFrame(info_hurr,columns=['name', 'type','date','ocean'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_hurr.to_csv('hurricane_info.csv')"
    ]
   }
  ],
