add initial web scraping notebooks for Zillow and Towards Data Science

--- a/scraping-projects/begineer-scraping/accuweather/scraper.ipynb
+++ b/scraping-projects/begineer-scraping/accuweather/scraper.ipynb
@@ -9,14 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.chrome.options import Options\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "import time\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC"
    ]
   },
   {
@@ -30,12 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_web_page(url):\n",
-    "    driver = webdriver.Chrome() \n",
+    "    chrome_options  = Options()\n",
+    "    # chrome_options .add_argument('--headless')\n",
+    "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=chrome_options) \n",
     "    driver.get(url)\n",
     "    return driver"
    ]
@@ -50,47 +58,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info_hurr = []\n",
+    "def extract_hurr_info(driver):\n",
+    "    # Click to hurricanes\n",
+    "    click_hurricanes = '/html/body/div/div[6]/div[1]/div[2]/a[1]'\n",
+    "    driver.find_element(By.XPATH,click_hurricanes).click()\n",
+    "    time.sleep(5)\n",
+    "    \n",
+    "    click_see_all = '/html/body/div/div[7]/div[1]/div[1]/div[2]/div/a'\n",
+    "    driver.find_element(By.XPATH,click_see_all).click()\n",
+    "    time.sleep(5)\n",
+    "    \n",
+    "    click_show_more = '/html/body/div/div[7]/div[1]/div[1]/div[2]/div[4]'\n",
+    "    driver.find_element(By.XPATH,click_show_more).click()\n",
+    "    time.sleep(5)\n",
+    "\n",
+    "    rows = driver.find_elements(By.XPATH, '/html/body/div/div[7]/div[1]/div[1]/div[2]/div[3]/a')\n",
+    "\n",
+    "    info_hurr = []\n",
+    "    for row in rows:\n",
+    "        name = row.find_element(By.XPATH, './div[1]/div[2]').text\n",
+    "        type = row.find_element(By.XPATH, './div[2]/div[1]').text\n",
+    "        date = row.find_element(By.XPATH, './div[2]/div[2]').text\n",
+    "        ocean = row.find_element(By.XPATH, './div[2]/div[3]').text\n",
+    "        info_hurr.append([name, type, date, ocean])\n",
+    "    \n",
+    "    driver.back()\n",
+    "    driver.back()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "info = []\n",
+    "info_hurr = []\n",
+    "\n",
     "def extract_weather_info(driver):\n",
     "    title = driver.find_element(By.XPATH,'/html/body/div/div[6]/div[1]/div[1]/div[1]/p').text.split('\\n')[0]\n",
-    "    more_info_url = driver.find_element(By.XPATH,'/html/body/div/div[6]/div[1]/div[1]/div[1]/p/a').get_attribute('href')\n",
-    "    hurricanes = driver.find_element(By.XPATH,'/html/body/div/div[6]/div[1]/div[2]/a[1]').get_attribute('href')\n",
     "    rows = driver.find_elements(By.XPATH,'/html/body/div/div[6]/div[1]/div[1]/div[1]/div/a')\n",
     "    \n",
     "    for row in rows:\n",
     "        city = row.find_element(By.XPATH,'span[1]').text\n",
     "        temp = row.find_element(By.XPATH,'span[2]').text\n",
     "        info.append([city,temp])\n",
-    "    driver.quit()\n",
-    "    return title, more_info_url,hurricanes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "info_hurr = []\n",
-    "def extract_hurr_info(driver):\n",
-    "    see_more = driver.find_element(By.XPATH, '/html/body/div/div[7]/div[1]/div[1]/div[2]/div/a').get_attribute('href')\n",
-    "    driver_temp = open_web_page(see_more)\n",
-    "    driver_temp.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/div[2]/div[4]').click()\n",
     "    \n",
-    "    rows = driver_temp.find_elements(By.XPATH, '/html/body/div/div[7]/div[1]/div[1]/div[2]/div[3]/a')\n",
-    "\n",
-    "    for row in rows:\n",
-    "        name = row.find_element(By.XPATH,'div[1]/div[2]').text\n",
-    "        type = row.find_element(By.XPATH,'div[2]/div[1]').text\n",
-    "        date = row.find_element(By.XPATH,'div[2]/div[2]').text\n",
-    "        ocean = row.find_element(By.XPATH,'div[2]/div[3]').text\n",
-    "        info_hurr.append([name, type,date,ocean])\n",
-    "    driver_temp.quit()\n",
-    "    driver.quit()"
+    "    # driver = extract_hurr_info(driver)\n",
+    "    # time.sleep(5)\n",
+    "    \n",
+    "    driver.find_element(By.XPATH,'/html/body/div/div[6]/div[1]/div[1]/div[1]/p/a').click()\n",
+    "    \n",
+    "    row = driver.find_element(By.XPATH, '/html/body/div/div[7]/div[1]/div[1]/div[2]/a[1]')\n",
+    "    \n",
+    "    row.click()\n",
+    "    return title, driver"
    ]
   },
   {
@@ -102,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,16 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "title, more_info_url,hurricanes = extract_weather_info(driver)"
+    "title = extract_weather_info(driver)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,202 +157,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info_per_place = []\n",
+    "info_places = []\n",
+    "driver.find_element(By.XPATH,'/html/body/div/div[6]/div[1]/div[1]/div[1]/p/a').click()\n",
+    "time.sleep(3)\n",
+    "print('entré')\n",
+    "\n",
+    "rows = driver.find_elements(By.XPATH, '/html/body/div/div[7]/div[1]/div[1]/div[2]/a')\n",
+    "places = driver.find_elements(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/div[2]/a')\n",
+    "\n",
+    "for place in places:\n",
+    "    info_places.append(place.text)\n",
+    "\n",
+    "for i,row in enumerate(rows):\n",
+    "    place = places[i].text\n",
+    "    row.click()\n",
+    "    time.sleep(3)\n",
+    "    \n",
+    "    print('entré')\n",
+    "    sub_rows = driver.find_elements(By.XPATH, '/html/body/div/div[7]/div[1]/div[1]/div[2]/a')\n",
+    "    sub_places = driver.find_elements(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/div[2]/a')\n",
+    "\n",
+    "    for sub_place, sub_row in zip(sub_places,sub_rows):\n",
+    "        \n",
+    "        sub_row.click()\n",
+    "        time.sleep(3)\n",
+    "        \n",
+    "        print('entré')\n",
+    "        temp = driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/a[1]/div[2]/div[1]/div[1]/div/div[1]').text\n",
+    "        real_feel = driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/a[1]/div[2]/div[1]/div[1]/div/div[2]').text.split()[1]\n",
+    "        viento = driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/a[1]/div[2]/div[2]/div[2]/span[2]').text\n",
+    "        cal_viento = driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/a[1]/div[2]/div[2]/div[3]/span[2]').text\n",
+    "        raf_viento = driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/a[1]/div[2]/div[2]/div[2]/span[2]').text\n",
+    "        prev_fut= driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/a[2]/p').text\n",
+    "        \n",
+    "        info_per_place.append([place.text, sub_place.text, temp,real_feel,viento, raf_viento, cal_aire, prev_fut])\n",
+    "        driver.back()\n",
+    "        time.sleep(2)\n",
+    "    driver.back()\n",
+    "    time.sleep(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CONDICIONES METEOROLÓGICAS EN MÉXICO\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>city</th>\n",
-       "      <th>temperature</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Aguascalientes</td>\n",
-       "      <td>26°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Campeche</td>\n",
-       "      <td>26°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Chihuahua</td>\n",
-       "      <td>31°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Ciudad de México</td>\n",
-       "      <td>23°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Ciudad Nezahualcóyotl</td>\n",
-       "      <td>24°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Ciudad Victoria</td>\n",
-       "      <td>31°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Ecatepec de Morelos</td>\n",
-       "      <td>23°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Guadalajara</td>\n",
-       "      <td>27°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Gustavo A. Madero</td>\n",
-       "      <td>23°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Heroica Puebla de Zaragoza</td>\n",
-       "      <td>24°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Iztapalapa</td>\n",
-       "      <td>24°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Juárez</td>\n",
-       "      <td>32°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>León</td>\n",
-       "      <td>27°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>León de los Aldama</td>\n",
-       "      <td>27°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Mexicali</td>\n",
-       "      <td>32°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Monterrey</td>\n",
-       "      <td>31°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Nezahualcóyotl</td>\n",
-       "      <td>24°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Puebla</td>\n",
-       "      <td>24°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Tijuana</td>\n",
-       "      <td>19°</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Zapopan</td>\n",
-       "      <td>28°</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                          city temperature\n",
-       "0               Aguascalientes         26°\n",
-       "1                     Campeche         26°\n",
-       "2                    Chihuahua         31°\n",
-       "3             Ciudad de México         23°\n",
-       "4        Ciudad Nezahualcóyotl         24°\n",
-       "5              Ciudad Victoria         31°\n",
-       "6          Ecatepec de Morelos         23°\n",
-       "7                  Guadalajara         27°\n",
-       "8            Gustavo A. Madero         23°\n",
-       "9   Heroica Puebla de Zaragoza         24°\n",
-       "10                  Iztapalapa         24°\n",
-       "11                      Juárez         32°\n",
-       "12                        León         27°\n",
-       "13          León de los Aldama         27°\n",
-       "14                    Mexicali         32°\n",
-       "15                   Monterrey         31°\n",
-       "16              Nezahualcóyotl         24°\n",
-       "17                      Puebla         24°\n",
-       "18                     Tijuana         19°\n",
-       "19                     Zapopan         28°"
+       "'14 km/h'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(f'{title}\\n')\n",
-    "df"
+    "cal_aire"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver_2 = open_web_page(hurricanes)"
+    "driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/a[1]/div[2]/div[2]/div[2]/span[2]').text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "extract_hurr_info(driver_2)"
+    "sub_rows[1].text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for place,row in zip(places,rows):\n",
+    "    print(row.get_attribute('href'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/div[2]/a[1]').text\n",
+    "name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/a[1]/div[2]/div[1]/div[1]/div/div[1]').text\n",
+    "real_feel = driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/a[1]/div[2]/div[1]/div[1]/div/div[2]').text.split()[1]\n",
+    "viento = driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/a[1]/div[2]/div[2]/div[2]/span[2]').text\n",
+    "raf_viento = driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/a[1]/div[2]/div[2]/div[3]/span[2]').text\n",
+    "cal_aire = driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/a[1]/div[2]/div[2]/div[4]/span[2]').text\n",
+    "prev_fut= driver.find_element(By.XPATH,'/html/body/div/div[7]/div[1]/div[1]/a[2]/p').text\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +314,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_hurr.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
